--- a/simple.html
+++ b/simple.html
@@ -4,6 +4,17 @@
     <title> symple syntex
     </title>
   </head>
+  <body>
+    <h1> Heading 1 </h1>
+      <h2> heading </h2>
+      <h3> heading 3 </h3>
+      <h4> Heading 4 </h3>
+    <h5> Heading 5 </h5>
+    <h6> Heading 6 </h6>
+    <p> this is a paragraph . <br>this is the next line after the break tag  </p>
+    <br>
+  </body>
+  
 </html>
 
     
