--- a/simple.html
+++ b/simple.html
@@ -12,7 +12,21 @@
     <h5> Heading 5 </h5>
     <h6> Heading 6 </h6>
     <p> this is a paragraph . <br>this is the next line after the break tag  </p>
+    <hr>
+    <h2> list creation : unordered list </h2>
+    <ul>
+      <li> item 1</li>
+      <li> item 2 </li>
+      <li> item 2 </li>
+    </ul>
     <br>
+    <h2< list creation : ordered list </h2>
+  <ol>
+    <li> item 1</li>
+    <li> item 2 </li>
+    <li>  item 2 <li>
+    </oi>
+  
   </body>
   
 </html>
