--- a/simple.html
+++ b/simple.html
@@ -24,8 +24,10 @@
   <ol>
     <li> item 1</li>
     <li> item 2 </li>
-    <li>  item 2 <li>
+    <li>  item 3<li>
     </oi>
+  <h2> button tag </h2>
+  <button type="button" > Button</button>
   
   </body>
   
