--- a/simple.html
+++ b/simple.html
@@ -28,6 +28,14 @@
     </oi>
   <h2> button tag </h2>
   <button type="button" > Button</button>
+  <hr>
+  <h2> Now lets see how to add empases .<br>
+    <strong> Blod </strong><br>
+    <em> Italics</em>
+    <hr>
+    <h2> lets add some links and image .<br>
+      <a herf="https://bashirhub.github.io/basic-website/simple.html">link</a>
+      <img scr="https://github.com/BashirHub/basic-website/blob/main/ml.png">Image </img>
   
   </body>
   
