--- a/simple.html
+++ b/simple.html
@@ -35,7 +35,7 @@
     <hr>
     <h2> lets add some links and image .<br>
       <a herf="https://bashirhub.github.io/basic-website/simple.html">link</a>
-      <img scr="https://github.com/BashirHub/basic-website/blob/main/ml.png">Image </img>
+      <img scr="https://github.com/BashirHub/basic-website/blob/main/ml.png">Image <img/>
     <hr>
   
   </body>
