--- a/simple.html
+++ b/simple.html
@@ -34,8 +34,8 @@
     <em> Italics</em>
     <hr>
     <h2> lets add some links and image .<br>
-      <a herf="https://bashirhub.github.io/basic-website/simple.html">link</a>
-      <img scr="https://github.com/BashirHub/basic-website/blob/main/ml.png">Image <img/>
+      <a href="https://bashirhub.github.io/basic-website/simple.html">link</a>
+      <img src="https://github.com/BashirHub/basic-website/blob/main/ml.png">Image <img/>
     <hr>
   
   </body>
