--- a/simple.html
+++ b/simple.html
@@ -1,45 +1,25 @@
-<!DOCTYPY html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title> symple syntex
-    </title><br>
+    <meta charset="utf-8">
+    <title>My test page</title>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1> Heading 1 </h1>
-      <h2> heading </h2>
-      <h3> heading 3 </h3>
-      <h4> Heading 4 </h3>
-    <h5> Heading 5 </h5>
-    <h6> Heading 6 </h6>
-    <p> this is a paragraph . <br>this is the next line after the break tag  </p>
-    <hr>
-    <h2> list creation : unordered list </h2>
-    <ul>
-      <li> item 1</li>
-      <li> item 2 </li>
-      <li> item 2 </li>
-    </ul>
-    <br>
-    <h2< list creation : ordered list </h2>
-  <ol>
-    <li> item 1</li>
-    <li> item 2 </li>
-    <li>  item 3<li>
-    </oi>
-  <h2> button tag </h2>
-  <button type="button" > Button</button>
-  <hr>
-  <h2> Now lets see how to add empases .<br>
-    <strong> Blod </strong><br>
-    <em> Italics</em>
-    <hr>
-    <h2> lets add some links and image .<br>
-      <a href="https://bashirhub.github.io/basic-website/simple.html">link</a>
-      <img src="https://github.com/BashirHub/basic-website/blob/main/ml.png">Image <img/>
-    <hr>
-  
-  </body>
-  
-</html>
+    <h1>Mozilla is cool</h1>
+    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
-    
+    <p>At Mozilla, we’re a global community of</p>
+
+    <ul> <!-- changed to list in the tutorial -->
+      <li>technologists</li>
+      <li>thinkers</li>
+      <li>builders</li>
+    </ul>
+
+    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+
+    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+  </body>
+</html>
