--- a/simple.html
+++ b/simple.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Mozilla is cool</h1>
-    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img src="https://www.freecodecamp.org/news/content/images/2020/05/image-110.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
     <p>At Mozilla, we’re a global community of</p>
 
