--- a/simple.html
+++ b/simple.html
@@ -7,6 +7,9 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <style>
+      p{color:red;}
+    </style>
     <h1>Mozilla is cool</h1>
     <img src="https://www.freecodecamp.org/news/content/images/2020/05/image-110.png" alt="The Firefox logo: a flaming fox surrounding the Earth." style="width:100px;height:100px;">
 
