--- a/simple.html
+++ b/simple.html
@@ -1,28 +1,36 @@
+te what a page looks like, let's create a basic HTML document:
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My test page</title>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <style>
-      p{color:red;}
-    </style>
-    <h1>Mozilla is cool</h1>
-    <img src="https://www.freecodecamp.org/news/content/images/2020/05/image-110.png" alt="The Firefox logo: a flaming fox surrounding the Earth." style="width:100px;height:100px;">
-
-    <p>At Mozilla, we’re a global community of</p>
-
-    <ul> <!-- changed to list in the tutorial -->
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./styles.css">
+  <title>Document</title>
+</head>
+<body>
+  <style>
+    .p{color: aqua;}
+    .ul{background-color: blueviolet;}
+    .li{font-size: larger;}
+  </style>
+  <h1>This is a first level heading in HTML. With CSS, I will turn this into red color</h1>
+  <h2>This is a second level heading in HTML. With CSS, I will turn this into blue color</h2>
+  <h3>This is a third level heading in HTML. With CSS, I will turn this into green color</h3>
+  <p>This is a <em>paragragh</em> As you can see, I placed an empahisis on the word "paragraph". Now, I will change also
+    the background color of the word "paragraph" to black, and its text color  to green, all with just CSS.</p>
+  <p>The main essence of this tutorial is to:</p>
+    <ul>
+       <li>Show you how to format a web document with HTML</li>
+       <li>Show you how to design a web page with CSS</li>
+       <li>Show you how to program a web document with JavaScript</li>
     </ul>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
-
-    <p>Read the <a href="https://www.facebook.com/profile.php?id=100054600354120">DARM Alhmo</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
-  </body>
+  <p>Next, I am going to add the following two numbers and display the result, all with JavaScript<p/>
+    <p>First number:<span id= "firstNum">2</span> <br></p>
+    <p>Second number: <span id= "secondNum">7</span> </p>
+    <p>Therefore, the sum of the two of those numbers is: <span id= "answer">(placeholder for the answer)</span></p>
+    <input type="button" id="sumButton" value="Click to add!">
+</body>
 </html>
