--- a/simple.html
+++ b/simple.html
@@ -11,9 +11,9 @@ te what a page looks like, let's create a basic HTML document:
 </head>
 <body>
   <style>
-    .p{color: aqua;}
-    .ul{background-color: blueviolet;}
-    .li{font-size: larger;}
+    p{color: aqua;}
+    ul{background-color: blueviolet;}
+    li{font-size: larger;}
   </style>
   <h1>This is a first level heading in HTML. With CSS, I will turn this into red color</h1>
   <h2>This is a second level heading in HTML. With CSS, I will turn this into blue color</h2>
