--- a/testhtml.html
+++ b/testhtml.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>links</title>
+    </head>
+    <body>
+        
+        <a href="www.google.com">Click her</a>
+    </body>
 
+</html>
